Added more tests
Signed-off-by: DPatti88 <patricia.nilsson@iths.se>